# apple-all-schematic

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  apple-schematic-gui.spec  monitor.sh  pyproject.toml  requirements.txt
.claude/: settings.json
.codex/: config.toml
.cursor/: BUGBOT.md
.cursor/rules/: project-overrides.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
args/: config.json
context/: APPLE_PRODUCT_REFERENCE.md
docs/: USER_GUIDE.md  architecture.md
docs/decisions/: 0001-brand-and-packaging.md
goals/: APPLE_ALL_SCHEMATIC_PLAN.md
scripts/: build_dmg.sh  build_macos.sh  local-dev-bootstrap.sh  make_icon.py  make_icon.sh  run_gui.sh
src/: organize_downloads.py  tg_schematic_downloader.py  validation.py
src/gui/: __init__.py  app.py
src/gui/core/: __init__.py  auth.py  backend.py  config.py  organizer.py  paths.py  settings.py
src/gui/packaging/: __init__.py  dmg_settings.py
src/gui/resources/: app.icns
src/gui/ui/: __init__.py  channel_dialog.py  download_view.py  icons.py  login_dialog.py  main_window.py  organize_view.py  settings_dialog.py  theme.py  theme.qss  widgets.py
tests/: test_config.py  test_helpers.py  test_state.py  test_validation.py
