[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "apple-all-schematic"
version = "2.0.0"
description = "BoardVault — desktop (macOS) + CLI app to download and organize Apple device schematics and boardviews from public Telegram channels"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "telethon>=1.42.0,<2",
    "tqdm>=4.67,<5",
    "python-dotenv>=1.2,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.15",
]
gui = [
    "PySide6>=6.7,<7",
    "qasync>=0.27",
]
build = [
    "pyinstaller>=6.0",
    "dmgbuild>=1.6",
]

[project.urls]
Repository = "https://github.com/subkoks/apple-all-schematic"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
